semantic/src/test_cases/bad/test4.cl
(* Class being inherited from does not exist *)

class A {
    a : Int;
};

class B inherits C {
    b : Int;
};

class Main {
    main() : Int {
        0
    };
};
